Bug 168479 - Apache mail archives (mod_mbox) don't display properly
Summary: Apache mail archives (mod_mbox) don't display properly
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-06 09:03 UTC by Josef Spillner
Modified: 2009-04-25 18:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Josef Spillner 2008-08-06 09:03:32 UTC
Version:           4.1.00 (KDE 4.1.0) (using 4.1.00 (KDE 4.1.0), Kubuntu packages)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24-19-386

Funny to have that report on mod_mbox just when there's the interview with MarkMail :)

When trying to access mod_mbox archives like on
	http://mail-archives.apache.org/mod_mbox/ode-user/200808.mbox/browser
the AJAX interface doesn't seem to work properly, the "Loading..." bar never gets replaced by the actual list archives.

It works fine with Mozilla and with Konqueror from KDE 3.5.9.
Comment 1 Maksim Orlovich 2008-08-06 16:06:53 UTC
I think we just do a better job of convincing them we're Mozilla now  --- the thing that errors out is unchanged since 3.5.x (they do innerHTML on tables, which is a Mozilla extension to an IE extension, and we support it at roughly the original's level). This is about the only case we don't want that convincing to happen...

Comment 2 Maksim Orlovich 2009-04-25 18:42:05 UTC
SVN commit 959136 by orlovich:

Go ahead and remove restrictions on what elements can be altered
with innerHTML, to match Mozilla's embrace-and-extend of this IE 
extension. We do not take advantage of the context yet, but I am not 
sure we have to do context-aware reconstruction here anyway;
and the weather is way too nice for me to try to make sense of HTML5's
spaghetti code. 

(And whitespace issue with this are a separate report)

Makes google suggest on google.com front page work --- thanks to 
Ariya for mentionning it exists.

Makes the 'other systems' download wizard for flash player on adobe.com 
work --- thanks to 'bokey' on IRC for bringing it up...

Makes stuff show up on mail-archives.apache.org

BUG:168479
BUG:137408


 M  +4 -21     html_elementimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=959136
Comment 3 Maksim Orlovich 2009-04-25 18:46:07 UTC
SVN commit 959142 by orlovich:

automatically merged revision 959136:
Go ahead and remove restrictions on what elements can be altered
with innerHTML, to match Mozilla's embrace-and-extend of this IE 
extension. We do not take advantage of the context yet, but I am not 
sure we have to do context-aware reconstruction here anyway;
and the weather is way too nice for me to try to make sense of HTML5's
spaghetti code. 

(And whitespace issue with this are a separate report)

Makes google suggest on google.com front page work --- thanks to 
Ariya for mentionning it exists.

Makes the 'other systems' download wizard for flash player on adobe.com 
work --- thanks to 'bokey' on IRC for bringing it up...

Makes stuff show up on mail-archives.apache.org

BUG:168479
BUG:137408

 M  +4 -21     html_elementimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=959142