automatically merged revision 959136: Go ahead and remove restrictions on what elements can be altered with innerHTML, to match Mozilla's embrace-and-extend of this IE extension. We do not take advantage of the context yet, but I am not sure we have to do context-aware reconstruction here anyway; and the weather is way too nice for me to try to make sense of HTML5's spaghetti code.

(And whitespace issue with this are a separate report)

Makes google suggest on google.com front page work --- thanks to 
Ariya for mentionning it exists.

Makes the 'other systems' download wizard for flash player on adobe.com 
work --- thanks to 'bokey' on IRC for bringing it up...

Makes stuff show up on mail-archives.apache.org

BUG:168479
BUG:137408

svn path=/trunk/KDE/kdelibs/; revision=959142